# GTM-Engine

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  GUIDE.md  MERGE_PLAN.md  canary_wharf_funded_companies.csv  canary_wharf_funded_companies_icp_scored.csv  canary_wharf_outreach_contacts.csv  canary_wharf_outreach_plan.md  package-lock.json  package.json  pyproject.toml  railway.json  render.yaml  vitest.config.ts
.claude/hooks/: create-env.sh  session-start.sh
gtm_agent/: __init__.py  agent.py  degraded_mode.py  engine.py  local_store.py  mcp_remote.py  mcp_server.py  tools.py
skills/: README.md
skills/cold-email-copy-grader/: SKILL.md
skills/domain-setup-dynadot-zapmail/: SKILL.md
skills/google-maps-scraper/: SKILL.md
skills/prospeo-full-export/: SKILL.md
src/: cli.ts  index.test.ts  index.ts
src/__tests__/: api-connectivity.test.ts  preflight.test.ts  setup.ts  workflow-logic.test.ts
src/config/: env.ts  providers.ts  proxy.ts
src/db/: campaigns.ts  client.test.ts  client.ts  contacts.ts  enrichment.ts  index.ts  organizations.ts  query.ts  types.test.ts  types.ts
src/dedup/: matcher.ts  normalizer.ts
src/enrichment/: run.ts  website-analyzer.ts
src/icp/: challenge-orchestrator.ts  challenge.ts  types.ts  website-deep-analyzer.ts
src/lib/: bulk-import.ts
src/providers/: types.ts
src/services/: cost-tracker.ts  enrichment.ts  preflight.ts  search.ts
src/sources/: bulk-csv-loader.ts  catalog.ts  download-lists.ts  pg-bulk-loader.ts  run-strategy.ts  setup-and-load.ts  types.ts  validate-data.ts
(+34 files in other folders)
